--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,10 @@
 [deps]
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
+StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
